--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "less": "less-watch-compiler src/styles ./build/styles main.less",
+    "build": "lessc src/styles/main.less build/styles/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -36,7 +37,6 @@
     "is-stream": "^2.0.1",
     "is-what": "^3.14.1",
     "isexe": "^2.0.0",
-    "less": "^4.4.2",
     "make-dir": "^2.1.0",
     "merge-stream": "^2.0.0",
     "merge2": "^1.4.1",
@@ -70,6 +70,7 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
+    "less": "^4.4.2",
     "less-watch-compiler": "^1.16.3"
   }
 }
